@@ -1,3 +1,12 @@
+Q-0.9.0d92
+[fix] ARM emulation on Q GUI breaks (Chocobo) (#17)
+[fix] Editing a PC inserts incorrect spaces into argument (andreasf) (#13)
+[fix] Starting guest can display screenshot of previous session (andreasf) (#28)
+[fix] Edit PC window title inconsistent (andreasf) (#26)
+
+Q-0.9.0d91
+branch Q-0.9.0a89
+
 Q-0.9.0d89
 [new] new icons (Andi)
 [fix] CpuView adapted to new icons
